{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 510,
  "lineage": "4e80d18e-3c4b-7941-f72f-61ae1e7bc312",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:security-group/sg-0935ad7e0fd5e8896",
            "description": "Allow Redis access from EKS worker nodes only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0935ad7e0fd5e8896",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011aa6aa338f52050"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "starttech-redis-sg",
            "name_prefix": "",
            "owner_id": "641240771475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "starttech-redis-sg"
            },
            "tags_all": {
              "Name": "starttech-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_cluster.starttech-cluster",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb1e5fedee3a4d3d",
            "arn": "arn:aws:ec2:us-east-1:641240771475:elastic-ip/eipalloc-0fb1e5fedee3a4d3d",
            "association_id": "eipassoc-046a2a87e206b8052",
            "domain": "vpc",
            "id": "eipalloc-0fb1e5fedee3a4d3d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0100ae7427b5829f3",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-44-196-92-47.compute-1.amazonaws.com",
            "public_ip": "44.196.92.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "starttech-nat-eip"
            },
            "tags_all": {
              "Name": "starttech-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "starttech-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:internet-gateway/igw-0461e04c93d06bc3c",
            "id": "igw-0461e04c93d06bc3c",
            "owner_id": "641240771475",
            "tags": {
              "Name": "starttech-igw"
            },
            "tags_all": {
              "Name": "starttech-igw"
            },
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "starttech-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb1e5fedee3a4d3d",
            "association_id": "eipassoc-046a2a87e206b8052",
            "connectivity_type": "public",
            "id": "nat-0e3a7f222787d96bd",
            "network_interface_id": "eni-0100ae7427b5829f3",
            "private_ip": "10.0.1.71",
            "public_ip": "44.196.92.47",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1c98bd54eeb5cc8",
            "tags": {
              "Name": "starttech-nat"
            },
            "tags_all": {
              "Name": "starttech-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:route-table/rtb-01bb06fd2c3878853",
            "id": "rtb-01bb06fd2c3878853",
            "owner_id": "641240771475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3a7f222787d96bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "starttech-private-rt"
            },
            "tags_all": {
              "Name": "starttech-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_nat_gateway.starttech-nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:route-table/rtb-07ce0a1689c8fdc5d",
            "id": "rtb-07ce0a1689c8fdc5d",
            "owner_id": "641240771475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0461e04c93d06bc3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "starttech-public-rt"
            },
            "tags_all": {
              "Name": "starttech-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce400c9de67ef20",
            "route_table_id": "rtb-01bb06fd2c3878853",
            "subnet_id": "subnet-07c24a0d5a6f0f7dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_nat_gateway.starttech-nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01290a84db9a5f7f3",
            "route_table_id": "rtb-01bb06fd2c3878853",
            "subnet_id": "subnet-0c4061474a05dc78d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_nat_gateway.starttech-nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b3597cebbaadbb3",
            "route_table_id": "rtb-07ce0a1689c8fdc5d",
            "subnet_id": "subnet-0b1c98bd54eeb5cc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0597c35c5ecfae2d7",
            "route_table_id": "rtb-07ce0a1689c8fdc5d",
            "subnet_id": "subnet-06a8a2e288eabaa36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech-igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:subnet/subnet-07c24a0d5a6f0f7dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c24a0d5a6f0f7dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641240771475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "starttech-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:subnet/subnet-0c4061474a05dc78d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4061474a05dc78d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641240771475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "starttech-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:subnet/subnet-0b1c98bd54eeb5cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1c98bd54eeb5cc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641240771475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "starttech-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:subnet/subnet-06a8a2e288eabaa36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a8a2e288eabaa36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641240771475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "starttech-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3e0cd0822ddea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "starttech-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:641240771475:vpc/vpc-0e3e0cd0822ddea03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f28e76501fb16658",
            "default_route_table_id": "rtb-0e52f7b9a9b44fc88",
            "default_security_group_id": "sg-077bfa9fa62585c90",
            "dhcp_options_id": "dopt-038fe3d145214dcb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3e0cd0822ddea03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e52f7b9a9b44fc88",
            "owner_id": "641240771475",
            "tags": {
              "Environment": "production",
              "Name": "starttech-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "starttech-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}